# WallDesignerTool

./: .gitignore  README.md  check_models.py  check_segformer.py  check_segformer_post.py  compare_models.py  compare_models_api.py  hough_edge_transform.py  main.py  pyproject.toml  run_oneformer.py  segmentation_metrics_comparison.csv  target_image.txt  target_images.txt
benchmark/: README.md  RunBenchmark.md  benchmark.py  filter.py  infer_wall.py  main.py  main_all.py  metadata_filtered.csv  metrics.py  segmentation.py  visualize_comparison.py
benchmark/benchmark_output/: benchmark_results_home_or_hotel_mask2former.csv  benchmark_results_home_or_hotel_mask2former_preprocessed.csv  benchmark_results_home_or_hotel_nyu.csv  benchmark_results_home_or_hotel_nyu_preprocessed.csv  benchmark_results_home_or_hotel_oneformer.csv  benchmark_results_home_or_hotel_oneformer_preprocessed.csv  benchmark_results_home_or_hotel_segformer.csv  (+1 more)
data/: README.md  download-scannet.py  sample.txt
docs/: index.html  midterm.html  styles.css
overlay-1/: README.md
seg-clustering/: kmeansCluster.py  meansShiftCluster.py  meansShiftCluster_accelerate.py
seg-mask2former/: README.md  facebookModel.py  facebookModelGPU_instances.py  facebookModelGPU_walls.py
src/: README.md  main.py  make_comparison_chart.py  mapping.py  mask2former_cannyhoughwallsplitting.py  mask2former_texture_mapping.py  pyproject.toml  segmentation.py  splitting.py  test_affine_blend.py  test_intrinsic_decomposition.py
src/walldesignertool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+7 files in other folders)
